--- a/main.css
+++ b/main.css
@@ -132,33 +132,6 @@ body::-webkit-scrollbar-thumb {
   font-size: 1.25vw;
 }
 
-  /*Covid button*/
-
-  
-.icon {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-
-.icon--plus > path {
-    fill: #F5F5F5;
-    stroke: #F5F5F5;
-    stroke-width: 0.1;
-    stroke-linejoin: round;
-}
-
-.cov {
-  margin: 0 auto;
-  font-size: 1.5vw;
-  font-family: 'HelveticaNeueLT Pro 65 Md';
-  position: absolute;
-  color:white;
-  z-index: 120;
-  color: black;
-  border-radius: 3px;
-}
-
 /*Contact footer*/
 .fa-map-marker, .fa-phone, .fa-envelope {
   color: #F5F5F5;
@@ -171,6 +144,8 @@ body::-webkit-scrollbar-thumb {
   font-size: .75vw;
   font-family:'HelveticaNeueLT Pro 65 Md';
 }
+
+/*List stuff for footer*/
 
 .list {
   display: flex;
@@ -187,4 +162,143 @@ body::-webkit-scrollbar-thumb {
   background-position: center;
   background-repeat: no-repeat;
   
+}
+
+/*BLINKING TEXT CURSOR */
+.blinking-cursor {
+  font-family: 'pexico_microregular';
+  font-size: 2rem;
+  color: #2E3D48;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+  z-index: 120;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #F5F5F5;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #F5F5F5;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #F5F5F5;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #F5F5F5;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #F5F5F5;
+  }
+}
+
+
+
+
+@media (max-width: 414px) {
+
+  .grid {
+    left: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    display: grid;
+    gap: none;
+    /* Learned cool new trick repeat(x, 1fr) is the same as writing 1fr x amount of times */
+    /*grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(6, minmax(240px, 1fr));*/
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    z-index: 98;
+  }
+
+  .black, .white {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: black;
+    height: 100%;
+    width: 100%;
+    transition: all 1000ms;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+  }
+
+  .logo {
+    grid-column: span 3 / auto;
+    grid-row: span 2 / auto;
+    overflow: hidden;
+    background-position: center;
+    object-fit: cover;
+    color: #F5F5F5;
+    text-align: center;
+    font-family: 'pexico_microregular';
+  }
+
+  .nav {
+    font-family:'HelveticaNeueLT Pro 65 Md';
+    font-size: 1.2rem;
+  }
+
+  .fa-square-full {
+    color: #F5F5F5;
+    position: relative;
+    float: left;
+    font-size: .5rem;
+  }
+  
+  .fa-square-full > span {
+    color: #F5F5F5;
+    font-family:'HelveticaNeueLT Pro 65 Md';
+    font-size: .5rem;
+  }
+  
+  /*Contact footer*/
+  .fa-map-marker, .fa-phone, .fa-envelope {
+    color: #F5F5F5;
+    position: relative;
+    float: left;
+    font-size: .65rem;
+  }
+  
+  .fa-map-marker > span, .fa-phone > span, .fa-envelope > span {
+    font-size: .5rem;
+    font-family:'HelveticaNeueLT Pro 65 Md';
+  }
 }
