--- a/database/xis/main/templates/main/base.html
+++ b/database/xis/main/templates/main/base.html
@@ -51,8 +51,14 @@
 
 
         <div id="content", name="content", class="main">
-            {% block content %}
-            {% endblock %}
+            <div class="row justify-content-center">
+                <div class="col-8">
+                    <h1 class="mt-2">My site</h1>
+                    <hr class="mt-0 mb-4">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
